--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -3,7 +3,7 @@
  */
 .btn {
 	align-items: center;
-	background-color: $#ffc71c;
+	background-color: $color-btn-bg;
 	border: 0;
 	border-radius: 0;
 	box-sizing: border-box;
