_buttons.scss: changed

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -7,7 +7,7 @@
 	border: 0;
 	border-radius: 0;
 	box-sizing: border-box;
-	color: $color-btn-text;
+	color: #ffc71c;
 	cursor: pointer;
 	display: inline-flex;
 	font-size: 0.88889em;
