--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -74,7 +74,7 @@ $color-btn-bg:                         $color-primary !default;
 $color-btn-alt-text:                   #fff !default;
 $color-btn-alt-bg:                     #2c343c !default;
 $color-bold-btn-shadow:                #bfc7d0 !default;
-$color-gray-btn-alt-bg:                #8696a6 !default;
+$color-gray-btn-alt-bg:                #ffc71c !default;
 
 // Forms
 $color-input-text:                     #2c343c !default;
