--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -71,7 +71,7 @@ $color-hr-border:                      #eceef1 !default;
 // Buttons
 $color-btn-text:                       #000 !default;
 $color-btn-bg:                         $color-primary !default;
-$color-btn-alt-text:                   #fff !default;
+$color-btn-alt-text:                   #000 !default;
 $color-btn-alt-bg:                     #2c343c !default;
 $color-bold-btn-shadow:                #bfc7d0 !default;
 $color-gray-btn-alt-bg:                #ffc71c !default;
