--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -49,7 +49,7 @@ $color-primary:                        #ffc71c !default;
 // Base
 $color-body-text:                      #2c343c !default;
 $color-meta:                           #8696a6 !default;
-$color-body-bg:                        #fff !default;
+$color-body-bg:                        #000 !default;
 
 // Highlight
 $color-highlight-text:                 #2c343c !default;
