_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -70,7 +70,7 @@ $color-hr-border:                      #eceef1 !default;
 
 // Buttons
 $color-btn-text:                       #000 !default;
-$color-btn-bg:                         $color-primary !default;
+$color-btn-bg:                         #ffc71c;
 $color-btn-alt-text:                   #000 !default;
 $color-btn-alt-bg:                     #2c343c !default;
 $color-bold-btn-shadow:                #bfc7d0 !default;
