_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -74,7 +74,7 @@ $color-btn-bg:                         #ffc71c;
 $color-btn-alt-text:                   #000 !default;
 $color-btn-alt-bg:                     #2c343c !default;
 $color-bold-btn-shadow:                #bfc7d0 !default;
-$color-gray-btn-alt-bg:                #ffc71c !default;
+$color-gray-btn-alt-bg:                #fff !default;
 
 // Forms
 $color-input-text:                     #2c343c !default;
